Added credential type selection for presentation flow
- changed open api schema
- and implementation on code level
