# implementation/src/public/openapi.json
@@ -30,7 +30,9 @@
   "paths": {
     "/credentials/issue": {
       "post": {
-        "tags": ["Issuer"],
+        "tags": [
+          "Issuer"
+        ],
         "summary": "Issues a credential and returns it in the response body.",
         "operationId": "issueCredential",
         "description": "Issues a credential and returns it in the response body.",
@@ -105,7 +107,9 @@
     },
     "/credentials/derive": {
       "post": {
-        "tags": ["Holder"],
+        "tags": [
+          "Holder"
+        ],
         "summary": "Derives a credential and returns it in the response body.",
         "operationId": "deriveCredential",
         "description": "Derives a credential and returns it in the response body.",
@@ -155,7 +159,9 @@
     },
     "/credentials/status": {
       "post": {
-        "tags": ["Issuer"],
+        "tags": [
+          "Issuer"
+        ],
         "summary": "Updates the status of an issued credential",
         "operationId": "updateCredentialStatus",
         "description": "Updates the status of an issued credential.",
@@ -198,7 +204,9 @@
     },
     "/credentials/verify": {
       "post": {
-        "tags": ["Verifier"],
+        "tags": [
+          "Verifier"
+        ],
         "summary": "Verifies a verifiableCredential and returns a verificationResult in the response body.",
         "operationId": "verifyCredential",
         "description": "Verifies a verifiableCredential and returns a verificationResult in the response body.",
@@ -245,7 +253,9 @@
     },
     "/presentations/verify": {
       "post": {
-        "tags": ["Verifier"],
+        "tags": [
+          "Verifier"
+        ],
         "summary": "Verifies a Presentation with or without proofs attached and returns a verificationResult in the response body.",
         "operationId": "verifyPresentation",
         "description": "Verifies a verifiablePresentation and returns a verificationResult in the response body.  Given the possibility of denial of service, buffer overflow, or other style attacks, an implementation is permitted to rate limit or restrict requests against this API endpoint to those requests that contain only a single credential with a 413 or 429 error code as appropriate.",
@@ -305,7 +315,9 @@
     },
     "/credentials/store": {
       "post": {
-        "tags": ["Holder"],
+        "tags": [
+          "Holder"
+        ],
         "summary": "Store a credential",
         "operationId": "storeCredential",
         "description": "Store a credential",
@@ -358,7 +370,9 @@
     },
     "/credentials/transfer": {
       "post": {
-        "tags": ["Holder"],
+        "tags": [
+          "Holder"
+        ],
         "summary": "Transfer a credential to another holder (needs work)",
         "operationId": "transferCredential",
         "description": "Transfer a credential to another holder. TODO find out what's needed for a transfer. Might be diffucult as no sdk, bib or platform implements this part of the process.",
@@ -411,7 +425,9 @@
     },
     "/credentials/delete/{id}": {
       "delete": {
-        "tags": ["Holder"],
+        "tags": [
+          "Holder"
+        ],
         "summary": "Delete a credential",
         "operationId": "deleteCredential",
         "description": "Delete a credential",
@@ -470,7 +486,9 @@
     },
     "/presentations/prove": {
       "post": {
-        "tags": ["Holder"],
+        "tags": [
+          "Holder"
+        ],
         "summary": "Proves a presentation and returns it in the response body.",
         "operationId": "provePresentation",
         "description": "Proves a presentation and returns it in the response body.",
@@ -517,7 +535,9 @@
     },
     "/presentations/present": {
       "post": {
-        "tags": ["Holder"],
+        "tags": [
+          "Holder"
+        ],
         "summary": "Present a presentation to a verifier",
         "operationId": "presentPresentation",
         "description": "Present a presentation to a verifier",
@@ -532,6 +552,22 @@
             }
           }
         ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "oneOf": [
+                  {
+                    "$ref": "#/components/schemas/SupportedWalletCredential"
+                  },
+                  {
+                    "$ref": "#/components/schemas/VerifiablePresentation"
+                  }
+                ]
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Verifiable Presentation successfully verified!",
@@ -789,7 +825,9 @@
           }
         },
         "example": {
-          "checks": ["proof"],
+          "checks": [
+            "proof"
+          ],
           "warnings": [],
           "errors": []
         }
@@ -816,7 +854,9 @@
       "GeneralError": {
         "type": "object",
         "description": "Object for general error responses",
-        "required": ["error"],
+        "required": [
+          "error"
+        ],
         "properties": {
           "error": {
             "type": "boolean",
@@ -830,7 +870,9 @@
       "CredentialDeletionResult": {
         "type": "object",
         "description": "Object representing the result of the deletion operation",
-        "required": ["isDeleted"],
+        "required": [
+          "isDeleted"
+        ],
         "properties": {
           "isDeleted": {
             "type": "boolean",
@@ -905,9 +947,15 @@
           }
         },
         "example": {
-          "@context": ["https://www.w3.org/2018/credentials/v1", "https://www.w3.org/2018/credentials/examples/v1"],
+          "@context": [
+            "https://www.w3.org/2018/credentials/v1",
+            "https://www.w3.org/2018/credentials/examples/v1"
+          ],
           "id": "http://example.gov/credentials/3732",
-          "type": ["VerifiableCredential", "UniversityDegreeCredential"],
+          "type": [
+            "VerifiableCredential",
+            "UniversityDegreeCredential"
+          ],
           "issuer": "did:example:123",
           "issuanceDate": "2020-03-16T22:37:26.544Z",
           "credentialSubject": {
@@ -936,9 +984,15 @@
           }
         ],
         "example": {
-          "@context": ["https://www.w3.org/2018/credentials/v1", "https://www.w3.org/2018/credentials/examples/v1"],
+          "@context": [
+            "https://www.w3.org/2018/credentials/v1",
+            "https://www.w3.org/2018/credentials/examples/v1"
+          ],
           "id": "http://example.gov/credentials/3732",
-          "type": ["VerifiableCredential", "UniversityDegreeCredential"],
+          "type": [
+            "VerifiableCredential",
+            "UniversityDegreeCredential"
+          ],
           "issuer": "did:example:123",
           "issuanceDate": "2020-03-16T22:37:26.544Z",
           "credentialSubject": {
@@ -993,18 +1047,27 @@
           }
         },
         "example": {
-          "@context": ["https://www.w3.org/2018/credentials/v1", "https://www.w3.org/2018/credentials/examples/v1"],
+          "@context": [
+            "https://www.w3.org/2018/credentials/v1",
+            "https://www.w3.org/2018/credentials/examples/v1"
+          ],
           "holder": "did:example:123",
           "type": "VerifiablePresentation",
           "verifiableCredential": [
             {
-              "@context": ["https://www.w3.org/2018/credentials/v1", "https://www.w3.org/2018/credentials/examples/v1"]
+              "@context": [
+                "https://www.w3.org/2018/credentials/v1",
+                "https://www.w3.org/2018/credentials/examples/v1"
+              ]
             },
             {
               "id": "http://example.gov/credentials/3732"
             },
             {
-              "type": ["VerifiableCredential", "UniversityDegreeCredential"]
+              "type": [
+                "VerifiableCredential",
+                "UniversityDegreeCredential"
+              ]
             },
             {
               "issuer": "did:example:123"
@@ -1050,18 +1113,27 @@
           }
         ],
         "example": {
-          "@context": ["https://www.w3.org/2018/credentials/v1", "https://www.w3.org/2018/credentials/examples/v1"],
+          "@context": [
+            "https://www.w3.org/2018/credentials/v1",
+            "https://www.w3.org/2018/credentials/examples/v1"
+          ],
           "holder": "did:example:123",
           "type": "VerifiablePresentation",
           "verifiableCredential": [
             {
-              "@context": ["https://www.w3.org/2018/credentials/v1", "https://www.w3.org/2018/credentials/examples/v1"]
+              "@context": [
+                "https://www.w3.org/2018/credentials/v1",
+                "https://www.w3.org/2018/credentials/examples/v1"
+              ]
             },
             {
               "id": "http://example.gov/credentials/3732"
             },
             {
-              "type": ["VerifiableCredential", "UniversityDegreeCredential"]
+              "type": [
+                "VerifiableCredential",
+                "UniversityDegreeCredential"
+              ]
             },
             {
               "issuer": "did:example:123"
@@ -1193,16 +1265,20 @@
       },
       "Provider": {
         "type": "string",
-        "enum": ["veramo", "mattr", "trinsic", "azure"]
+        "enum": [
+          "veramo",
+          "mattr",
+          "trinsic",
+          "azure"
+        ]
       },
       "WalletIssuanceRequest": {
         "type": "object",
         "description": "For MATTR and Trinsic wallet",
         "properties": {
           "credentialType": {
-            "type": "string",
             "description": "Types of issuable credentials",
-            "enum": ["MastersDegree"]
+            "$ref": "#/components/schemas/SupportedWalletCredential"
           },
           "credentialProperties": {
             "type": "object",
@@ -1220,14 +1296,29 @@
             }
           }
         },
-        "required": ["credentialType"],
+        "required": [
+          "credentialType"
+        ],
         "example": {
-          "credentialType": "MastersDegree",
           "credentialProperties": {
             "fullName": "Peter",
             "title": "Master of Science",
             "nickname": "Pete"
           }
+        }
+      },
+      "SupportedWalletCredential": {
+        "type": "object",
+        "properties": {
+          "credentialType": {
+            "type": "string",
+            "enum": [
+              "MastersDegree"
+            ]
+          }
+        },
+        "example": {
+          "credentialType": "MastersDegree"
         }
       }
     }
